# rag-pipeline

./: .gitignore  LICENSE  commitlint.config.js  docker-compose.yml  package-lock.json  package.json
api/: .dockerignore  Dockerfile  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 06c8602b33e0_add_pgvector_extension.py  afcb46a36887_fix_created_at_timezone.py  d3da7dc1423e_fix_chat_and_message_models.py  daaa198f3874_create_file_table.py  e4a10f4f7dd6_added_columns_content_type_size.py
api/app/: context.py  db.py  dependencies.py  main.py  seed.py
api/app/models/: __init__.py  chat.py  file.py  message.py
api/app/repositories/: file_repository.py  message_repository.py
api/app/routers/: chat.py  file.py  files.py
api/app/schemas/: chat.py  file.py  message.py
api/app/services/: ai_service.py  chat_service.py  file_service.py  to_documents_conversion.py
api/app/utils/: path.py
web/: .gitignore  .prettierrc  Dockerfile  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
web/src/: App.tsx  index.css
web/src/components/: ButtonDanger.tsx  ButtonPrimary.tsx  Layout.tsx  SortIcon.tsx  TopNav.tsx
web/src/lib/: utils.ts
web/src/pages/: ChatPage.tsx  FilesPage.tsx  UploadPage.tsx
web/src/types/: index.ts
